Parser/grammar.txt
expr    : term ((PLUS|MINUS) term)*

term    : factor ((MUL|DIV) factor)*

factor  : INT|FLOAT
		: (PLUS|MINUS) factor
		: LPAREN expr RPAREN




Programs :

Props : intervalExpr (>, <,>=,<=) intervalExpr
      : NOT Props
      : Props (AND) Props
      : Forall VAR Props
      : BOX(Program) Props


intervalExpr : intervalExpr (+,*) intervalExpr
             : (/,-)? interval


intervalExpr : intervalTerm ((+) intervalTerm)*

intervalTerm : interval ((*) interval)*

interval : (-)? lowerNum SEPARATOR upperNum
         : VAR

lowerNum : LOWERLIM (-)? INT

upperNum : (-)? INT UPPERLIM
